--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ on:
       - main # Executa o deploy sempre que houver um push/merge na branch main
 
 jobs:
-  deploy:
+  build:
+    name: Build Project
     runs-on: ubuntu-latest
 
     steps:
@@ -14,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Configura o Node.js e instala as dependências
+      # Configura o Node.js e instala dependências
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -28,6 +29,26 @@ jobs:
       - name: Build project
         run: yarn build
 
+      # Salva o diretório de build como artefato
+      - name: Save build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: dist/ # Diretório gerado pelo build
+
+  deploy:
+    name: "Deploy to FTP"
+    runs-on: ubuntu-latest
+    needs: [build]
+
+    steps:
+      # Baixa os artefatos gerados no job "build"
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: dist/
+
       # Faz o deploy via FTP
       - name: Deploy to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
@@ -36,4 +57,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: dist/ # Diretório de build gerado pelo Vite
-          server-dir: /httpdocs/2025/ # Caminho remoto no FTP (ajuste conforme necessário)
+          server-dir: /httpdocs/2025/
