--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "path": "^0.12.7",
+    "postcss": "^8.4.49",
     "vite": "^6.0.3"
   },
   "devDependencies": {
-    "sass": "^1.82.0"
+    "postcss-import": "^16.1.0",
+    "sass": "^1.82.0",
+    "tailwindcss": "^3.4.16"
   }
 }
