--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.20",
+    "bootstrap-icons": "^1.11.3",
     "path": "^0.12.7",
     "postcss": "^8.4.49",
     "vite": "^6.0.3"
